--- a/collective-memory-app/frontend/index.html
+++ b/collective-memory-app/frontend/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collective Memory Dashboard</title>
-    <meta name="description" content="Advanced knowledge management and search system" />
+    <title>Vite + React</title>
   </head>
-  <body class="bg-gray-50 dark:bg-gray-900">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-</html> 
+</html>
